tests/functional/lang/eval-fail-groupBy-3.err.exp
error:
       … while calling the 'groupBy' builtin
         at /pwd/lang/eval-fail-groupBy-3.nix:1:1:
            1| builtins.groupBy (x: x) [
             | ^
            2|   "foo"

       … while evaluating the return value of the grouping function passed to builtins.groupBy

       error: expected a string but found an integer: 1
